nouveau: NVPlatformProbe, handle shareable entities

During NVPciProbe, xf86ConfigPciEntity() implicitly calls checks and sets
the entity as shared
Here we are only allocating the screen, thus need to explicitly call the
functions

ZaphodHead and Xinerama should finally work

Bugzilla: https://bugs.freedesktop.org/show_bug.cgi?id=56347

Reported-By: Vladimir Chebotarev <exc@rbcmail.ru>
Reported-By: Damian Nowak <nowaker@geozone.pl>
Tested-By: Damian Nowak <nowaker@geozone.pl>
Signed-off-by: Emil Velikov <emil.l.velikov@gmail.com>
Signed-off-by: Ben Skeggs <bskeggs@redhat.com>